<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/beige"
    android:padding="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_color"
        android:textSize="40sp"
        android:textStyle="bold"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:layout_gravity="center">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/checkerboard"
            android:padding="10dp">
        </ImageView>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/checkerboardgreen"
            android:padding="10dp">
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board1"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            style="@style/shop_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board2"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            style="@style/shop_text"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/checkerboardice"
            android:padding="10dp" >
        </ImageView>

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/checkerboardruby"
            android:padding="10dp" >
        </ImageView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board3"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            style="@style/shop_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/board4"
            android:paddingLeft="45dp"
            android:paddingRight="30dp"
            style="@style/shop_text"/>

    </LinearLayout>

    <TextView
        android:id="@+id/change_board_instruction"
        android:layout_width="346dp"
        android:layout_height="146dp"
        android:layout_gravity="center"
        android:paddingTop="20dp"
        android:text="@string/cb_instructions"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textAlignment="center"/>

</LinearLayout>